# anki-chess

./: .swp  Makefile  README.md  coverage.lcov  danish.pgn  pyproject.toml
src/anki_chess/: cli.py
src/anki_chess/addon/: __init__.py  controller.py  on_js_bridge_message.py
src/anki_chess/anki_templates/: card_back.html  card_front.html
src/anki_chess/examples/: repertoire.pgn
src/anki_chess/pgn2anki/: __init__.py  cli.py  const.py  emitter.py  line.py  node.py  parser.py
src/anki_chess/tests/: test_addon_controller.py  test_cli.py  test_emitter_csv.py  test_on_js_bridge_message.py  test_parser_basic.py  test_parser_helpers.py
