[project]
name = "anki-chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aqt>=25.7.5",
    "python-chess>=1.999",
]

[project.scripts]
anki-chess = "anki_chess.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
    "ty>=0.0.1a19",
]
